feat: fixed UI issues integrated Google Restraunts and Refresh token structure

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -26,3 +26,12 @@
     background-position: center;
     filter: brightness(30%); /* Adjust the values to your preference */
   }
+
+  .bg-banner-image {
+    background-image: url('/assets/banner_bg.jpg');
+  }
+  
+  .brightness-30 {
+    filter: brightness(30%);
+  }
+  
